# tinygrep

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tinygrep/: cli.py
