[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinygrep"                # change if PyPI says the name is taken
version = "0.1.2"                # bump every release
description = "Small grep-like CLI with a tiny regex engine"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Tom" }]
keywords = ["regex","grep","cli"]
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
tinygrep = "tinygrep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tinygrep"]
